# aoc2023

./: .gitignore  aoc2023.cabal  flake.nix
app/: Main.hs
src/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  DayXX.hs  Grid2D.hs  Helpers.hs  Lib.hs
