cabal-version:   3.0
name:            aoc2023
version:         0.1.0.0
license:         NONE
author:          Fred Strauss
maintainer:      fred@strider.co.za
build-type:      Simple

common warnings
    ghc-options: -Wall

library
  hs-source-dirs: src
  build-depends:  base, parsec, containers, mtl
  exposed-modules:
    Helpers
    Grid2D
    Day01
    Day02
    Day03
    Day04
    Day05
    Day06
    Day07
    Day08
    Day09
    Day10
    Day11
    Day12

executable aoc2023
    import:           warnings
    main-is:          Main.hs
    build-depends:    aoc2023, base, containers
    hs-source-dirs:   app
    default-language: Haskell2010
